gallery endpoint fix
